--- a/baby_steps.ipynb
+++ b/baby_steps.ipynb
@@ -36,23 +36,140 @@
    ],
    "source": [
     "a = 2\n",
-    "a = a+1\n",
+    "a = a+1 #The value is updated\n",
     "print(a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (<ipython-input-16-f62a8caa1085>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-16-f62a8caa1085>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    print(a) #Spaces matter\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m unexpected indent\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=5\n",
+    " print(a) #Spaces matter"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "Haha\n",
+      "1\n",
+      "Haha\n",
+      "2\n",
+      "Haha\n",
+      "3\n",
+      "Haha\n",
+      "4\n",
+      "Haha\n",
+      "LOL\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Loop\n",
+    "for i in range(5):\n",
+    "    print(i)\n",
+    "    print('Haha')\n",
+    "print('LOL')\n",
+    "\n",
+    "# Learning points:\n",
+    "# 1) That's how you do a for-loop. Mind the : at the end.\n",
+    "# 2) The inside of the loop is marked by indentation. Everything that's properly indented gets looped.\n",
+    "# 3) Python is a zero-indexed language. So range(5) produces 5 numbers, from 0 to 4."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 8]\n",
+      "Zero-th element: 2\n",
+      "One-th element: 4\n",
+      "2\n",
+      "4\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Lists\n",
+    "b = [2,4,8]\n",
+    "print(b)\n",
+    "print('Zero-th element:', b[0]) # Zero-th element is 2!\n",
+    "print(\"One-th element:\", b[1]) # One-th element is 4?\n",
+    "# Single and double quotations do the same thing\n",
+    "\n",
+    "for i in b: \n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "Haha here's your number: 3 , silly!\n",
+      "Haha here's your number: 8 , silly!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a)\n",
+    "\n",
+    "def my_print(i):\n",
+    "    print(\"Haha here's your number:\",i, \", silly!\")\n",
+    "\n",
+    "my_print(3)\n",
+    "my_print(8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "my_print() takes 1 positional argument but 2 were given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-29-f193fd29b914>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mmy_print\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: my_print() takes 1 positional argument but 2 were given"
+     ]
+    }
+   ],
+   "source": [
+    "my_print(4,5)"
+   ]
   }
  ],
  "metadata": {
