--- a/02_05_bifurcation.ipynb
+++ b/02_05_bifurcation.ipynb
@@ -20,10 +20,11 @@
     "x = 0.67\n",
     "fig = plt.figure()\n",
     "i = 0\n",
-    "for r in np.arange(2.8,4.0,0.00005):\n",
+    "for r in np.arange(2.8,4.0,0.0002):\n",
     "    for i in range(nsteps + i%50):\n",
     "        x = r*x*(1-x)\n",
-    "    plt.plot(r,x,'k.', markersize=1);"
+    "    plt.plot(r,x,'k.', markersize=1);\n",
+    "    "
    ]
   }
  ],
