--- a/02_16_predator_prey_hw.ipynb
+++ b/02_16_predator_prey_hw.ipynb
@@ -12,17 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 42,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-40-f27761909815>, line 26)",
+     "evalue": "invalid syntax (<ipython-input-42-f27761909815>, line 26)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-40-f27761909815>\"\u001b[1;36m, line \u001b[1;32m26\u001b[0m\n\u001b[1;33m    ax1 = fig1.add_subplot(1,len(possible_pl),itrial+1);\u001b[0m\n\u001b[1;37m      ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-42-f27761909815>\"\u001b[1;36m, line \u001b[1;32m26\u001b[0m\n\u001b[1;33m    ax1 = fig1.add_subplot(1,len(possible_pl),itrial+1);\u001b[0m\n\u001b[1;37m      ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -72,7 +72,7 @@
    "source": [
     "In this model I attempted to simulate the effect on deforestation on the population sizes of foxes and rabbits in an area. \n",
     "I tried to incorporate our formula for the probability of animals meeting from class into the loop as another term. \n",
-    "I created a range of possible values for pl, the number of places, and kept all other variables the same. \n",
+    "I created a range of possible values for pl, the number of places, and kept all other variables the same. I had trouble expressing how \n",
     "\n"
    ]
   }
