--- a/Debugging_HW.ipynb
+++ b/Debugging_HW.ipynb
@@ -1753,7 +1753,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### My best guess is it has to do with the growth rate for cabbage. I tried to incorporate food_rate into the code using similar logic to bunny reproduction but I didn't see any changes in model when run. It may be worthwhile to try adding a conditional statement for cabbage growth, though."
+    "My best guess is it has to do with the growth rate for cabbage as it wasn't explicitly stated in the code. I tried to incorporate food_rate into the code using similar logic to bunny reproduction but I didn't see any changes in model when run. It may be worthwhile to try adding a conditional statement for cabbage growth, though."
    ]
   }
  ],
